--- a/index.html
+++ b/index.html
@@ -1,1 +1,328 @@
-Hello World
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-22234865-3', 'auto');
+ga('send', 'pageview');
+
+</script>
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+				<title>KYU H. LEE @ UGA</title>
+				<link rel="stylesheet" type="text/css" media="screen,print" href="kyu.css" />
+				<script type="text/javascript">
+
+				var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', 'UA-22234865-1']);
+				_gaq.push(['_trackPageview']);
+
+				(function() {
+				 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+				 })();
+
+</script>
+  </head>
+
+<!--
+<a href="https://ftp.gnu.org/find.txt.gz">[test]</a>
+-->
+		<body style="padding: 10pt">
+          
+<div class="paragraph_style">KYU HYUNG LEE <br/> </div>
+
+<div style="float:left; padding-left: 10pt; padding-right: 10pt"> <img src="http://cs.uga.edu/sites/default/files/styles/photo_medium/public/pic_kyu.jpg?itok=0YIQ6zxB" height="200" width="200"/> </div>
+
+<table style="float: left; margin-left: 20pt;" cellpadding=5 class="paragraph_style_3">
+<tr>
+<td>&nbsp;</td>
+</tr>
+
+<tr>
+  <br>
+		<strong>
+		Assistant Professor <br />
+		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
+		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
+		</strong>
+		<br />
+</tr>
+<tr>
+		415 Boyd Graduate Studies Research Center,  <br />
+		Dept. of Computer Science  <br />
+		Athens, Georgia, 30602 <br /> <br>
+
+		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
+		Room: GSRC 638B<br>
+</tr>
+</table>
+
+<div style="clear:both">
+<BR/>
+</div>
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">About me:</p>
+  <!--
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">I'm a 5th year Ph.D student in Department of Computer Science, Purdue University. 
+		-->
+		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
+		I'm an Assistant Professor of Computer Science Department at the University of Georgia.
+		I received my Ph.D in Computer Science at Purdue University. 
+		I was co-advised by  <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang</a> and 
+		<a href="http://www.cs.purdue.edu/homes/dxu/">Dr. Dongyan Xu.</a>
+		<!-- My advisor is <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang.</a>
+		I also collaborate frequently with <a href="http://www.cs.purdue.edu/homes/dxu/">Dr. Dongyan Xu.</a>
+		-->
+		I got my Master and B.S in Computer Engineering from <a href="http://www.ce.hongik.ac.kr/">Hong-Ik University</a> in Korea, 
+		and and my Master's thesis advisor was <a href="https://sites.google.com/a/necsst.ce.hongik.ac.kr/necsstopen/people/samhnoh">Dr. Sam H. Noh.</a>
+		<br>
+ 
+</div>
+
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Research Interests:</p>
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">Cyber security, Software reliability and security; Mobile Security; Program Analysis; Software engineering; Distributed Systems;</p>
+</div>
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Prospective Students:</p>
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body"> I am (always) looking for motivated (graduate and undergraduate) students with solid system and/or security background. If you are interested in working with me, please drop me an email.</p>
+</div>
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Teaching:</p>
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
+		<UL>
+		<LI>CSCI4730/6730 - Operating Systems [Spring2017]
+		<LI>CSCI8060 - Advanced Software Engineering [Fall2016]
+		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015]
+		<LI>CSCI8060 - Advanced Software Engineering <a href="spring2015/">[Spring2015]</a>
+		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
+		</UL>
+		</p>
+</div>
+
+<div class="block">
+		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Publications:</p>
+
+		<table cellpadding=5>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://asiaccs2017.com/">AsiaCCS'17</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">DroidForensics: Accurate Reconstruction of Android Attacks via Multi-layer Forensic Logging, </span> 
+						<span class="author">Xingzi Yuan, Omid Setayeshfar, Hongfei Yan, Pranav Panage, Xuetao Wei, Kyu Hyung Lee.</span>
+						<a href="">(to appear)</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.internetsociety.org/events/ndss-symposium/ndss-symposium-2017">NDSS'17</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Enabling Reconstruction of Attacks on Users via Efficient Browsing Snapshots, </span> 
+						<span class="author">Phani Vadrevu, Jienan Liu, Bo Li, Babak Rahbarinia, Kyu Hyung Lee, Roberto Perdisci.</span>
+						<a href="publications/ndss17_2.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.internetsociety.org/events/ndss-symposium/ndss-symposium-2017">NDSS'17</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">A2C: Self Destructing Exploit Executions via Input Perturbation, </span> 
+						<span class="author">Yonghwi Kwon, Brendan Saltaformaggio, I Luk Kim, Kyu Hyung Lee, Xiangyu Zhang, Dongyan Xu.</span>
+						<a href="publications/ndss17_1.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://globecom2016.ieee-globecom.org/">GLOBECOM'16</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">emphaSSL: Towards Emphasis as a Mechanism to Harden Networking Security in Android Apps,</span> 
+						<span class="author">Xuetao Wei, Michael Wolf, Lei Guo, Kyu Hyung Lee, Ming-Chun Huang, and Nan Niu.</span>
+						<a href="publications/gc16.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://sdiwc.net/ijcsdf/">IJCSDF'16 (journal)</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">SBBox: A Tamper-Resistant Digital Archiving System,</span> 
+						<span class="author">Monjur Alam, Zhe Cheng Lee, Chrysostomos Nicopoulos, Kyu Hyung Lee, Jongman Kim, Junghee Lee.</span>
+						<a href="http://sdiwc.net/digital-library/sbbox-a-tamperresistant-digital-archiving-system">[link]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.cs.ucdavis.edu/fse2016/">FSE'16</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title"> PerfGuard: Binary-Centric Application Performance Monitoring in Production Environments, </span> 
+						<span class="author">Chung Hwan Kim, Junghwan Rhee, <u>Kyu Hyung Lee</u>, Xiangyu Zhang and Dongyan Xu.</span>
+						<a href="publications/fse16.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://acsac.org/2015/">ACSAC'15</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title"> Accurate, Low Cost and Instrumentation-Free Security Audit Logging for Windows, </span> 
+						<span class="author">Shiqing Ma, <u>Kyu Hyung Lee</u>, Chung Hwan Kim, Junghwan Rhee, Xiangyu Zhang and Dongyan Xu.</span>
+						<a href="publications/acsac15.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://ecoop14.it.uu.se/">ECOOP'14</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Infrastructure-Free Logging and Replay of Concurrent Execution on Multiple Cores, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, Dohyeong Kim and Xiangyu Zhang. </span>
+						<a href="publications/ecoop14.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.sigsac.org/ccs/CCS2013/index.html">CCS'13</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">LogGC: Garbage Collecting Audit Log, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, Xiangyu Zhang and Dongyan Xu. </span>
+						<a href="publications/ccs13.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.internetsociety.org/events/ndss-symposium-2013">NDSS'13</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">High Accuracy Attack Provenance via Binary-Based Execution Partition, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, Xiangyu Zhang and Dongyan Xu. </span>
+						<a href="publications/ndss13.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://2011.dsn.org/">DSN'11</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Unified Debugging of Distributed Systems with Recon, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, Nick Sumner, Xiangyu Zhang and Patrick Eugster. </span>
+						<a href="publications/dsn11.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://pldi11.cs.utah.edu/">PLDI'11</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Toward Generating Reducible Replay Log, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, Yunhui Zheng, Nick Sumner and Xiangyu Zhang. </span>
+						<a href="publications/pldi11.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.sigops.org/sosp/sosp09">SOSP'09</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">PRES: Probabilistic Replay with Execution Sketching on Multiprocessors, </span> 
+						<span class="author">Soyeon Park, Weiwei Xiong, Zuoning Yin, Rini Kaushik, <u>Kyu H. Lee</u>, Shan Lu and Yuanyuan Zhou. </span>
+						<a href="publications/sosp09.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.informatik.uni-trier.de/~ley/db/conf/icdcs/icdcs2008.html">ICDCS'08</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">PFC: Transparent Optimization of Existing Prefetching Strategies for Multi-level Storage Systems, </span> 
+						<span class="author">Zhe Zhang*, <u>Kyuhyung Lee*</u>, Xiaosong Ma, and Yuanyuan Zhou. </span>
+						<a href="publications/icdcs08.pdf">[PDF]</a>
+						<br>
+						<span class="author">* These authors contributed equally to this work.</span>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="http://www.siam.org/meetings/sdm08/">SDM'08</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">CISpan: Comprehensive Incremental Mining Algorithms of Closed Sequential Patterns for Multi-Versional Software Mining, </span> 
+						<span class="author">Ding Yuan, <u>Kyuhyung Lee</u>, Hong Cheng, Gopal Krishna, Zhenmin Li, Xiao Ma, Yuanyuan Zhou and Jiawei Han. </span>
+						<a href="publications/sdm08.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="">HotPower'08</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Augmenting RAID with an SSD for Energy Relief, </span>
+						<span class="author">Hyo J. Lee, <u>Kyu H. Lee</u> and Sam H. Noh. </span>
+						<a href="publications/hotpower08.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+
+		<tr>
+				<td>
+						<p class="conf"><a href="">ACST'07</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Write-Aware Buffer Cache Management Scheme for Nonvolatile RAM, </span> 
+						<span class="author"><u>Kyu Hyung Lee</u>, In Hwan Doh, Jongmoo Choi, Donghee Lee, and Sam H. Noh. </span>
+						<a href="publications/acst07.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		</table>
+</div>
