--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ ga('send', 'pageview');
 -->
 		<body style="padding: 10pt">
           
-<div class="paragraph_style">KYU HYUNG LEE <br/> </div>
+<!-- <div class="paragraph_style">KYU HYUNG LEE <br/> </div>
+-->
 
 <div style="float:left; padding-left: 10pt; padding-right: 10pt"> <img src="http://cs.uga.edu/sites/default/files/styles/photo_medium/public/pic_kyu.jpg?itok=0YIQ6zxB" height="200" width="200"/> </div>
 
@@ -49,6 +50,7 @@ ga('send', 'pageview');
   <br>
 		<strong>
 		Assistant Professor <br />
+		Kyu Hyung Lee (Kyu H. Lee) <br />
 		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
@@ -106,8 +108,8 @@ ga('send', 'pageview');
 		<LI>CSCI8060 - Advanced Software Engineering [Fall2016]
 		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016]
 		<LI>CSCI4730/6730 - Operating Systems [Fall2015]
-		<LI>CSCI8060 - Advanced Software Engineering <a href="spring2015/">[Spring2015]</a>
-		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
+		<LI>CSCI8060 - Advanced Software Engineering [Spring2015]</a>
+		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security [Fall2014]</a>
 		</UL>
 		</p>
 </div>
