--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ ga('send', 'pageview');
 		Dept. of Computer Science  <br />
 		Athens, Georgia, 30602 <br /> <br>
 
-		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
-		Room: GSRC 638B<br>
+		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690, Office: GSRC 638B<br>
 </tr>
 </table>
 
