--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ ga('send', 'pageview');
 -->
 		<body style="padding: 10pt">
           
-<!-- <div class="paragraph_style">KYU HYUNG LEE <br/> </div>
--->
+<div class="paragraph_style">KYU HYUNG LEE <br/> </div>
 
 <div style="float:left; padding-left: 10pt; padding-right: 10pt"> <img src="http://cs.uga.edu/sites/default/files/styles/photo_medium/public/pic_kyu.jpg?itok=0YIQ6zxB" height="200" width="200"/> </div>
 
