--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@ ga('send', 'pageview');
 </script>
   </head>
 
-<!--
-<a href="https://ftp.gnu.org/find.txt.gz">[test]</a>
--->
 		<body style="padding: 10pt">
           
-<div class="paragraph_style">KYU H. LEE <br/> </div>
+<div class="paragraph_style">KYU HYUNG LEE <br/> </div>
 
-<div style="float:left; padding-left: 10pt; padding-right: 10pt"> <img src="http://cs.uga.edu/sites/default/files/styles/photo_medium/public/pic_kyu.jpg?itok=0YIQ6zxB" height="200" width="200"/> </div>
+<div style="float:left; padding-left: 10pt; padding-right: 10pt"> <img src="http://cybersecurity.uga.edu/img/kyu.jpg" height="200" width="200"/> </div>
 
 <table style="float: left; margin-left: 20pt;" cellpadding=5 class="paragraph_style_3">
 <tr>
@@ -49,8 +46,6 @@ ga('send', 'pageview');
   <br>
 		<strong>
 		Assistant Professor <br />
-		Kyu Hyung Lee (Kyu H. Lee) <br />
-		<br />
 		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
@@ -61,7 +56,8 @@ ga('send', 'pageview');
 		Dept. of Computer Science  <br />
 		Athens, Georgia, 30602 <br /> <br>
 
-		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690, Office: GSRC 638B<br>
+		Email: kyuhlee at cs.uga.edu, Tel: (706) 542-4690 <br >
+		Room: GSRC 638B<br>
 </tr>
 </table>
 
@@ -103,12 +99,11 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Teaching:</p>
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
-		<LI>CSCI4730/6730 - Operating Systems [Spring2017]
-		<LI>CSCI8060 - Advanced Software Engineering [Fall2016]
-		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016]
-		<LI>CSCI4730/6730 - Operating Systems [Fall2015]
-		<LI>CSCI8060 - Advanced Software Engineering [Spring2015]</a>
-		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security [Fall2014]</a>
+		<LI>CSCI4250/6250 - Computer Security [Spring2018]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017]
+		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018]
+		<LI>CSCI8060 - Advanced Software Engineering [Spring2015, Fall2016]
+		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
 		</UL>
 		</p>
 </div>
@@ -120,13 +115,76 @@ ga('send', 'pageview');
 
 		<tr>
 				<td>
+						<p class="conf"><a href="https://www.usenix.org/conference/usenixsecurity19">USENIX SECURITY'19</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Fuzzification: Anti-Fuzzing Techniques, </span> 
+						<span class="author">Jinho Jung, Hong Hu, David Solodukhin, Daniel Pagan, Kyu Hyung Lee, Taesoo Kim.</span>
+						<a href="">[to appear]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="https://www.usenix.org/conference/atc18">USENIX ATC'18</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">Kernel-Supported Cost-Effective Audit Logging for Causality Tracking, </span> 
+						<span class="author">Shiqing Ma, Juan Zhai, Yonghwi Kwon, Kyu Hyung Lee, Xiangyu Zhang, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran, Dongyan Xu, Somesh Jha.</span>
+						<a href="publications/atc18.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+
+		<tr>
+				<td>
+						<p class="conf"><a href="https://www.ndss-symposium.org/">NDSS'18</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">JSgraph: Enabling Reconstruction of Web Attacks via Efficient Tracking of Live In-Browser JavaScript Executions, </span> 
+						<span class="author">Bo Li, Phani Vadrevu, Kyu Hyung Lee, Roberto Perdisci.</span>
+						<a href="publications/ndss18_2.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="https://www.ndss-symposium.org/">NDSS'18</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">MCI : Modeling-based Causality Inference in Audit Logging for Attack Investigation, </span> 
+						<span class="author">Yonghwi Kwon, Fei Wang, Weihang Wang, Kyu Hyung Lee, Wen-Chuan Lee, Shiqing Ma, Xiangyu Zhang, Dongyan Xu, Somesh Jha, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran.</span>
+						<a href="publications/ndss18_1.pdf">[PDF]</a>
+				</td>
+		</tr>
+
+		<tr>
+				<td>
+						<p class="conf"><a href="https://www.usenix.org/conference/usenixsecurity17">USENIX SECURITY'17</a>
+				</td>
+				<td width="20"></td>
+				<td> 
+						<span class="title">MPI: Multiple Perspective Attack Investigation with Semantic Aware Execution Partitioning, </span> 
+						<span class="author">Shiqing Ma, Juan Zhai, Fei Wang, Kyu Hyung Lee, Xiangyu Zhang, Dongyan Xu</span>
+						<a href="https://www.usenix.org/system/files/conference/usenixsecurity17/sec17-ma.pdf">[PDF]</a>
+<b><font color="#cc0000" size="2"><i>Distinguished Paper Award</i></font></b>
+				</td>
+		</tr>
+
+
+		<tr>
+				<td>
 						<p class="conf"><a href="http://asiaccs2017.com/">AsiaCCS'17</a>
 				</td>
 				<td width="20"></td>
 				<td> 
 						<span class="title">DroidForensics: Accurate Reconstruction of Android Attacks via Multi-layer Forensic Logging, </span> 
 						<span class="author">Xingzi Yuan, Omid Setayeshfar, Hongfei Yan, Pranav Panage, Xuetao Wei, Kyu Hyung Lee.</span>
-						<a href="">(to appear)</a>
+						<a href="publications/asiaccs17.pdf">[PDF]</a>
 				</td>
 		</tr>
 
