--- a/index.html
+++ b/index.html
@@ -101,12 +101,29 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
 		<LI>CSCI4250/6250 - Computer Security [Spring2018]
-		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019]
 		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018]
 		<LI>CSCI8060 - Advanced Software Engineering [Spring2015, Fall2016]
 		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
 		</UL>
 		</p>
+</div>
+
+<div class="block">
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Current Students:</p>
+  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
+		<UL>
+			<LI>Xingzi Yuan (Ph.D)
+			<LI>Omid Setayeshfar (Ph.D)
+			<LI>Karthika Subramani (Ph.D)
+			<LI>Ruoyan Cai (Ph.D)
+			<LI>An Chen (Ph.D)
+			<LI>Sean Frankum (Master)
+			<LI>Akshay Kokane (Master)
+			<LI>Matt Jones (Undergrad)
+			<LI>Anderson Kunho Kim (Undergrad)
+		</UL>
+	</p>
 </div>
 
 <div class="block">
