--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ ga('send', 'pageview');
 		-->
 		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		I'm an Assistant Professor of Computer Science Department at the University of Georgia.
-		I received my Ph.D in Computer Science at Purdue University.
+		I received my PhD in Computer Science at Purdue University.
 		I was co-advised by  <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang</a> and
 		<a href="http://www.cs.purdue.edu/homes/dxu/">Dr. Dongyan Xu.</a>
 		<!-- My advisor is <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang.</a>
@@ -113,15 +113,15 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_2">Current Students:</p>
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
-			<LI>Xingzi Yuan (Ph.D)
-			<LI>Omid Setayeshfar (Ph.D)
-			<LI>Karthika Subramani (Ph.D)
-			<LI>Ruoyan Cai (Ph.D)
-			<LI>An Chen (Ph.D)
-			<LI>Sean Frankum (Master)
-			<LI>Akshay Kokane (Master)
-			<LI>Matt Jones (Undergrad)
-			<LI>Anderson Kunho Kim (Undergrad)
+			<LI>Xingzi Yuan (PhD student)
+			<LI>Omid Setayeshfar (PhD student)
+			<LI>Karthika Subramani (PhD student)
+			<LI>Ruoyan Cai (PhD student)
+			<LI>An Chen (PhD student)
+			<LI>Sean Frankum (Master's student)
+			<LI>Akshay Kokane (Master's student)
+			<LI>Matt Jones (Undergrad student)
+			<LI>Anderson Kunho Kim (Undergrad student)
 		</UL>
 	</p>
 </div>
