--- a/Promotion/index.html
+++ b/Promotion/index.html
@@ -67,25 +67,11 @@
 						<a href="../publications/sec19.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
 					</p>
 			<LI><p>
-					<span class="title">Kernel-Supported Cost-Effective Audit Logging for Causality Tracking, </span>
-					<span class="author">Shiqing Ma, Juan Zhai, Yonghwi Kwon, Kyu Hyung Lee, Xiangyu Zhang, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran, Dongyan Xu, Somesh Jha.</span>
-					<span class="conf">In Proceedings of the 2018 Usenix Annual Technical Conference</span>
-					<span class="conf_abbr"> (ATC'18)</span>
-					<a href="../publications/atc18.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
-				</p>
-			<LI><p>
 				<span class="title">JSgraph: Enabling Reconstruction of Web Attacks via Efficient Tracking of Live In-Browser JavaScript Executions, </span>
 				<span class="author">Bo Li, Phani Vadrevu, Kyu Hyung Lee, Roberto Perdisci.</span>
 				<span class="conf">In Proceedings of the 25th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'18)</span>
 				<a href="../publications/ndss18_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
-				</p>
-			<LI><p>
-				<span class="title">MCI : Modeling-based Causality Inference in Audit Logging for Attack Investigation, </span>
-				<span class="author">Yonghwi Kwon, Fei Wang, Weihang Wang, Kyu Hyung Lee, Wen-Chuan Lee, Shiqing Ma, Xiangyu Zhang, Dongyan Xu, Somesh Jha, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran.</span>
-				<span class="conf">In Proceedings of the 25th Network and Distributed System Security</span>
-				<span class="conf_abbr"> (NDSS'18)</span>
-				<a href="../publications/ndss18_1.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
 				</p>
 			<LI><p>
 				<span class="title">MPI: Multiple Perspective Attack Investigation with Semantic Aware Execution Partitioning, </span>
@@ -94,6 +80,21 @@
 				<span class="conf_abbr"> (Security'17)</span>
 				<a href="../publications/sec17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
 				<b><font color="#cc0000" size="2"><i>Distinguished Paper Award</i></font></b>
+				</p>
+			<LI><p>
+				<span class="title">Enabling Reconstruction of Attacks on Users via Efficient Browsing Snapshots, </span>
+				<span class="author">Phani Vadrevu, Jienan Liu, Bo Li, Babak Rahbarinia, Kyu Hyung Lee, Roberto Perdisci.</span>
+				<span class="conf">In Proceedings of the 24th Network and Distributed System Security</span>
+				<span class="conf_abbr"> (NDSS'17)</span>
+				<a href="../publications/ndss17_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+			</p>
+			<LI>
+				<p>
+					<span class="title">DroidForensics: Accurate Reconstruction of Android Attacks via Multi-layer Forensic Logging, </span>
+					<span class="author">Xingzi Yuan, Omid Setayeshfar, Hongfei Yan, Pranav Panage, Xuetao Wei, Kyu Hyung Lee.</span>
+					<span class="conf">In Proceedings of ACM Asia Conference on Computer and Communications Security</span>
+					<span class="conf_abbr"> (AsiaCCS'17)</span>
+					<a href="../publications/asiaccs17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
 				</p>
 		</UL>
 	</p>
