--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ ga('send', 'pageview');
 				<span class="author">Jinho Jung, Hong Hu, David Solodukhin, Daniel Pagan, Kyu Hyung Lee, Taesoo Kim.</span>
 				<span class="conf">In Proceedings of the 28th USENIX Security Symposium</span>
 				<span class="conf_abbr"> (Security'19)</span>
-				<a href="publications/sec19.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/sec19.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 		</p>
 
@@ -146,7 +146,7 @@ ga('send', 'pageview');
 				<span class="author">Shiqing Ma, Juan Zhai, Yonghwi Kwon, Kyu Hyung Lee, Xiangyu Zhang, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran, Dongyan Xu, Somesh Jha.</span>
 				<span class="conf">In Proceedings of the 2018 Usenix Annual Technical Conference</span>
 				<span class="conf_abbr"> (ATC'18)</span>
-				<a href="publications/atc18.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/atc18.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -154,7 +154,7 @@ ga('send', 'pageview');
 				<span class="author">Bo Li, Phani Vadrevu, Kyu Hyung Lee, Roberto Perdisci.</span>
 				<span class="conf">In Proceedings of the 25th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'18)</span>
-				<a href="publications/ndss18_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ndss18_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -162,7 +162,7 @@ ga('send', 'pageview');
 				<span class="author">Yonghwi Kwon, Fei Wang, Weihang Wang, Kyu Hyung Lee, Wen-Chuan Lee, Shiqing Ma, Xiangyu Zhang, Dongyan Xu, Somesh Jha, Gabriela Ciocarlie, Ashish Gehani, Vinod Yegneswaran.</span>
 				<span class="conf">In Proceedings of the 25th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'18)</span>
-				<a href="publications/ndss18_1.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ndss18_1.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 		</p>
 
@@ -173,7 +173,7 @@ ga('send', 'pageview');
 				<span class="author">Shiqing Ma, Juan Zhai, Fei Wang, Kyu Hyung Lee, Xiangyu Zhang, Dongyan Xu</span>
 				<span class="conf">In Proceedings of the 26th Usenix Security Symposium</span>
 				<span class="conf_abbr"> (Security'17)</span>
-				<a href="publications/sec17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/sec17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 				<b><font color="#cc0000" size="2"><i>Distinguished Paper Award</i></font></b>
 			</p>
 
@@ -182,7 +182,7 @@ ga('send', 'pageview');
 				<span class="author">Xingzi Yuan, Omid Setayeshfar, Hongfei Yan, Pranav Panage, Xuetao Wei, Kyu Hyung Lee.</span>
 				<span class="conf">In Proceedings of ACM Asia Conference on Computer and Communications Security</span>
 				<span class="conf_abbr"> (AsiaCCS'17)</span>
-				<a href="publications/asiaccs17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/asiaccs17.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -190,7 +190,7 @@ ga('send', 'pageview');
 				<span class="author">Phani Vadrevu, Jienan Liu, Bo Li, Babak Rahbarinia, Kyu Hyung Lee, Roberto Perdisci.</span>
 				<span class="conf">In Proceedings of the 24th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'17)</span>
-				<a href="publications/ndss17_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ndss17_2.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -198,7 +198,7 @@ ga('send', 'pageview');
 				<span class="author">Yonghwi Kwon, Brendan Saltaformaggio, I Luk Kim, Kyu Hyung Lee, Xiangyu Zhang, Dongyan Xu.</span>
 				<span class="conf">In Proceedings of the 24th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'17)</span>
-				<a href="publications/ndss17_1.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ndss17_1.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 		</p>
 
@@ -209,7 +209,7 @@ ga('send', 'pageview');
 				<span class="author">Xuetao Wei, Michael Wolf, Lei Guo, Kyu Hyung Lee, Ming-Chun Huang, and Nan Niu.</span>
 				<span class="conf">In Proceedings of IEEE GLOBCOM</span>
 				<span class="conf_abbr"> (Globecom'16)</span>
-				<a href="publications/gc16.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/gc16.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -224,7 +224,7 @@ ga('send', 'pageview');
 				<span class="author">Chung Hwan Kim, Junghwan Rhee, Kyu Hyung Lee, Xiangyu Zhang and Dongyan Xu.</span>
 				<span class="conf">In Proceedings of ACM SIGSOFT International Symposium on the Foundations of Software Engineering</span>
 				<span class="conf_abbr"> (FSE'16)</span>
-				<a href="publications/fse16.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/fse16.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 		</p>
 
@@ -236,7 +236,7 @@ ga('send', 'pageview');
 				<span class="author">Shiqing Ma, <u>Kyu Hyung Lee</u>, Chung Hwan Kim, Junghwan Rhee, Xiangyu Zhang and Dongyan Xu.</span>
 				<span class="conf">In Proceedings of Annual Computer Security Applications Conference</span>
 				<span class="conf_abbr"> (ACSAC'15)</span>
-				<a href="publications/acsac15.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/acsac15.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -244,7 +244,7 @@ ga('send', 'pageview');
 				<span class="author"><u>Kyu Hyung Lee</u>, Dohyeong Kim and Xiangyu Zhang. </span>
 				<span class="conf">In Proceedings of the European Conference on Object-Oriented Programming</span>
 				<span class="conf_abbr"> (ECOOP'14)</span>
-				<a href="publications/ecoop14.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ecoop14.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -252,7 +252,7 @@ ga('send', 'pageview');
 				<span class="author"><u>Kyu Hyung Lee</u>, Xiangyu Zhang and Dongyan Xu. </span>
 				<span class="conf">In Proceedings of ACM Conference on Computer and Communications Security</span>
 				<span class="conf_abbr"> (CCS'13)</span>
-				<a href="publications/ccs13.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ccs13.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -260,7 +260,7 @@ ga('send', 'pageview');
 				<span class="author"><u>Kyu Hyung Lee</u>, Xiangyu Zhang and Dongyan Xu. </span>
 				<span class="conf">In Proceedings of the 20th Network and Distributed System Security</span>
 				<span class="conf_abbr"> (NDSS'13)</span>
-				<a href="publications/ndss13.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/ndss13.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -268,7 +268,7 @@ ga('send', 'pageview');
 				<span class="author"><u>Kyu Hyung Lee</u>, Nick Sumner, Xiangyu Zhang and Patrick Eugster. </span>
 				<span class="conf">In Proceedings of IEEE/IFIP International Conference on Dependable Systems and Networks</span>
 				<span class="conf_abbr"> (DSN'11)</span>
-				<a href="publications/dsn11.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/dsn11.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -276,7 +276,7 @@ ga('send', 'pageview');
 				<span class="author"><u>Kyu Hyung Lee</u>, Yunhui Zheng, Nick Sumner and Xiangyu Zhang. </span>
 				<span class="conf">In Proceedings of ACM SIGPLAN conference on Programming Language Design and Implementation</span>
 				<span class="conf_abbr"> (PLDI'11)</span>
-				<a href="publications/pldi11.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/pldi11.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -284,7 +284,7 @@ ga('send', 'pageview');
 				<span class="author">Soyeon Park, Weiwei Xiong, Zuoning Yin, Rini Kaushik, <u>Kyu H. Lee</u>, Shan Lu and Yuanyuan Zhou. </span>
 				<span class="conf">In Proceedings of ACM Symposium on Operating Systems Principles</span>
 				<span class="conf_abbr"> (SOSP'09)</span>
-				<a href="publications/sosp09.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/sosp09.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -292,7 +292,7 @@ ga('send', 'pageview');
 				<span class="author">Zhe Zhang*, <u>Kyuhyung Lee*</u>, Xiaosong Ma, and Yuanyuan Zhou. </span>
 				<span class="conf">In Proceedings of International Conference on Distributed Computing Systems</span>
 				<span class="conf_abbr"> (ICDCS'08)</span>
-				<a href="publications/icdcs08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/icdcs08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 				<br>
 				<span class="author">* These authors contributed equally to this work.</span>
 			</p>
@@ -302,7 +302,7 @@ ga('send', 'pageview');
 				<span class="author">Ding Yuan, <u>Kyuhyung Lee</u>, Hong Cheng, Gopal Krishna, Zhenmin Li, Xiao Ma, Yuanyuan Zhou and Jiawei Han. </span>
 				<span class="conf">In Proceedings of SIAM International Conference on Data Mining</span>
 				<span class="conf_abbr"> (SDM'08)</span>
-				<a href="publications/sdm08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/sdm08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -310,7 +310,7 @@ ga('send', 'pageview');
 				<span class="author">Hyo J. Lee, <u>Kyu H. Lee</u> and Sam H. Noh. </span>
 				<span class="conf">In Workshop on Power Aware Computing and Systems</span>
 				<span class="conf_abbr"> (HotPower'08)</span>
-				<a href="publications/hotpower08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/hotpower08.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 
 			<p>
@@ -318,7 +318,7 @@ ga('send', 'pageview');
 				<span class="author">Kyu Hyung Lee, In Hwan Doh, Jongmoo Choi, Donghee Lee, and Sam H. Noh. </span>
 				<span class="conf">In Proceedings of International Conference on Advances in Computer Science and Technology</span>
 				<span class="conf_abbr"> (ACST'08)</span>
-				<a href="publications/acst07.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> PDF</a>
+				<a href="publications/acst07.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
 			</p>
 		</p>
 	</p>
