--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ ga('send', 'pageview');
 <tr>
   <br>
 		<strong>
-		Assistant Professor <br />
+		Associate Professor <br />
 		<a href="http://cs.uga.edu/">Department of Computer Science</a> <br />
 		<a href="http://www.uga.edu/">University of Georgia(UGA)</a><br/>
 		</strong>
@@ -72,7 +72,7 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">I'm a 5th year Ph.D student in Department of Computer Science, Purdue University.
 		-->
 		<p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
-		I'm an Assistant Professor of Computer Science Department at the University of Georgia.
+		I'm an Associate Professor of Computer Science Department at the University of Georgia.
 		I received my PhD in Computer Science at Purdue University.
 		I was co-advised by  <a href="http://www.cs.purdue.edu/homes/xyzhang/">Dr. Xiangyu Zhang</a> and
 		<a href="http://www.cs.purdue.edu/homes/dxu/">Dr. Dongyan Xu.</a>
@@ -101,7 +101,7 @@ ga('send', 'pageview');
   <p style="padding-bottom: 0pt; padding-top: 0pt; " class="Body">
 		<UL>
 		<LI>CSCI4250/6250 - Computer Security [Spring2018]
-		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019]
+		<LI>CSCI4730/6730 - Operating Systems [Fall2015, Spring2017, Fall 2017, Fall 2019, Fall 2020]
 		<LI>CSCI8240 - Software Security and Cyber Forensics [Spring2016, Fall2017, Fall2018]
 		<LI>CSCI8060 - Advanced Software Engineering [Spring2015, Fall2016]
 		<LI>CSCI4900/6900 - Program Analysis for Software Reliability and Security <a href="fall2014/">[Fall2014]</a>
@@ -128,6 +128,27 @@ ga('send', 'pageview');
 
 <div class="block">
 	<p class="paragraph_style_2">Publications:</p>
+
+		<br><p class="year_style">2021</p>
+		<p>
+			<p>
+				<span class="title">C2SR: Cybercrime Scene Reconstruction for Post-mortem Forensic Analysis</span>
+				<span class="author">Yonghwi Kwon, Weihang Wang, Jinho Jung, Kyu Hyung Lee, Roberto Perdisci.</span>
+				<span class="conf">In Proceedings of the 28th Network and Distributed System Security</span>
+				<span class="conf_abbr"> (NDSS'21)</span>
+				<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
+			</p>
+
+			<br><p class="year_style">2020</p>
+			<p>
+				<p>
+					<span class="title">When Push Comes to Ads: Measuring the Rise of (Malicious) Push Advertising</span>
+					<span class="author">Karthika Subramani, Xingzi Yuan, Omid Setayeshfar, Phani Vadrevu, Kyu Hyung Lee, Roberto Perdisci.</span>
+					<span class="conf">In Proceedings of the ACM Internet Measurement Conference 2020</span>
+					<span class="conf_abbr"> (IMC'20)</span>
+					<a href="" target="_blank"><i class="fa fa-file-pdf-o" style="color:red;"></i> pdf</a>
+				</p>
+
 		<br><p class="year_style">2019</p>
 		<p>
 			<p>
